Entrega 1 completa Entraga 1 completa, também está implementado alguns comandos da entrega 2.
Signed-off-by: RafaelSL <rafaelsm_1993@hotmail.com>